Fixes to the entry screens. Finally works.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,9 @@
+auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
+file.reference.NetBeansProjects-Zikula=../Zikula
 ignore.path=
 include.path=\
-    ${php.global.include.path}
+    ${php.global.include.path}:\
+    ${file.reference.NetBeansProjects-Zikula}
 php.version=PHP_5
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
